--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -32,13 +32,24 @@
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Setup Bagua Dictionaty\n",
+    "\n",
+    "BAGUAS = '乾兌離震巽坎艮坤'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
    "outputs": [
     {
      "data": {
       "text/html": "<pre style=\"word-wrap: normal;white-space: pre;background: #fff0;line-height: 1.1;font-family: &quot;Courier New&quot;,Courier,monospace\">             ┌───┐ ░ ┌─┐               \n     q_0: |0>┤ H ├─░─┤M├───────────────\n             ├───┤ ░ └╥┘┌─┐            \n     q_1: |0>┤ H ├─░──╫─┤M├────────────\n             ├───┤ ░  ║ └╥┘┌─┐         \n     q_2: |0>┤ H ├─░──╫──╫─┤M├─────────\n             ├───┤ ░  ║  ║ └╥┘┌─┐      \n     q_3: |0>┤ H ├─░──╫──╫──╫─┤M├──────\n             ├───┤ ░  ║  ║  ║ └╥┘┌─┐   \n     q_4: |0>┤ H ├─░──╫──╫──╫──╫─┤M├───\n             ├───┤ ░  ║  ║  ║  ║ └╥┘┌─┐\n     q_5: |0>┤ H ├─░──╫──╫──╫──╫──╫─┤M├\n             └───┘ ░  ║  ║  ║  ║  ║ └╥┘\nmeasure_0: 0 ═════════╩══╬══╬══╬══╬══╬═\n                         ║  ║  ║  ║  ║ \nmeasure_1: 0 ════════════╩══╬══╬══╬══╬═\n                            ║  ║  ║  ║ \nmeasure_2: 0 ═══════════════╩══╬══╬══╬═\n                               ║  ║  ║ \nmeasure_3: 0 ══════════════════╩══╬══╬═\n                                  ║  ║ \nmeasure_4: 0 ═════════════════════╩══╬═\n                                     ║ \nmeasure_5: 0 ════════════════════════╩═\n                                       </pre>",
-      "text/plain": "<qiskit.visualization.text.TextDrawing at 0x110aab278>"
+      "text/plain": "<qiskit.visualization.text.TextDrawing at 0x1289584e0>"
      },
-     "execution_count": 2,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -55,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -67,14 +78,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "data": {
-      "text/plain": "'兌坎'"
+      "text/plain": "'艮乾'"
      },
-     "execution_count": 4,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
