--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -36,7 +36,7 @@
    "source": [
     "# Setup Bagua Dictionaty\n",
     "\n",
-    "BAGUAS = '乾兌離震巽坎艮坤'"
+    "BAGUAS = '坤震坎兌艮離巽乾'"
    ]
   },
   {
