--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -19,6 +19,17 @@
  },
  "cells": [
   {
+   "cell_type": "markdown",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Quantum 爻 System\n",
+    "\n",
+    "** 使用量子計算機產生八卦，實作利用量子力學進行算命 **"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
@@ -35,7 +46,6 @@
    "outputs": [],
    "source": [
     "# Setup Bagua Dictionaty\n",
-    "\n",
     "BAGUAS = '坤震坎兌艮離巽乾'"
    ]
   },
@@ -47,7 +57,7 @@
     {
      "data": {
       "text/html": "<pre style=\"word-wrap: normal;white-space: pre;background: #fff0;line-height: 1.1;font-family: &quot;Courier New&quot;,Courier,monospace\">             ┌───┐ ░ ┌─┐               \n     q_0: |0>┤ H ├─░─┤M├───────────────\n             ├───┤ ░ └╥┘┌─┐            \n     q_1: |0>┤ H ├─░──╫─┤M├────────────\n             ├───┤ ░  ║ └╥┘┌─┐         \n     q_2: |0>┤ H ├─░──╫──╫─┤M├─────────\n             ├───┤ ░  ║  ║ └╥┘┌─┐      \n     q_3: |0>┤ H ├─░──╫──╫──╫─┤M├──────\n             ├───┤ ░  ║  ║  ║ └╥┘┌─┐   \n     q_4: |0>┤ H ├─░──╫──╫──╫──╫─┤M├───\n             ├───┤ ░  ║  ║  ║  ║ └╥┘┌─┐\n     q_5: |0>┤ H ├─░──╫──╫──╫──╫──╫─┤M├\n             └───┘ ░  ║  ║  ║  ║  ║ └╥┘\nmeasure_0: 0 ═════════╩══╬══╬══╬══╬══╬═\n                         ║  ║  ║  ║  ║ \nmeasure_1: 0 ════════════╩══╬══╬══╬══╬═\n                            ║  ║  ║  ║ \nmeasure_2: 0 ═══════════════╩══╬══╬══╬═\n                               ║  ║  ║ \nmeasure_3: 0 ══════════════════╩══╬══╬═\n                                  ║  ║ \nmeasure_4: 0 ═════════════════════╩══╬═\n                                     ║ \nmeasure_5: 0 ════════════════════════╩═\n                                       </pre>",
-      "text/plain": "<qiskit.visualization.text.TextDrawing at 0x12d06f6a0>"
+      "text/plain": "<qiskit.visualization.text.TextDrawing at 0x125157b70>"
      },
      "execution_count": 3,
      "metadata": {},
@@ -56,7 +66,6 @@
    ],
    "source": [
     "# Setup Quantum Circuit\n",
-    "\n",
     "circ = QuantumCircuit(6)\n",
     "for i in range(6):\n",
     "    circ.h(i)\n",
@@ -71,8 +80,6 @@
    "outputs": [],
    "source": [
     "# Use Simulator for Testing\n",
-    "\n",
-    "from qiskit import Aer\n",
     "backend = Aer.get_backend('qasm_simulator')"
    ]
   },
@@ -83,7 +90,7 @@
    "outputs": [
     {
      "data": {
-      "text/plain": "'巽震'"
+      "text/plain": "'乾艮'"
      },
      "execution_count": 5,
      "metadata": {},
@@ -92,13 +99,10 @@
    ],
    "source": [
     "# Execute the Result\n",
-    "\n",
     "job = execute(circ, backend, shots=1)\n",
     "result = job.result().get_counts(circ)\n",
     "\n",
     "# Convert result to 「重卦」\n",
-    "BAGUAS = '乾兌離震巽坎艮坤'\n",
-    "\n",
     "converted = int(list(result.keys())[0], 2)\n",
     "BAGUAS[converted >> 3] + BAGUAS[converted % 8]"
    ]
